# RustCRUDServerTemplate

./: .gitignore  Cargo.toml  README.md
src/: models.rs
