[package]
name = "rust_crud_server_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1.0.189",features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.33.0",features = ["full"]}
async-trait = "0.1.74"
actix-cors = "0.6.4"

